# gollum

./: .gitignore  .readthedocs.yml  CITATION.md  LICENSE  MANIFEST.in  README.md  environment.yml  environment_M1.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  gollum-tests.yml
data/: synthetic_20220204_01.csv  synthetic_20220204_02.csv  synthetic_20220204_03.csv
docs/: api.rst  conf.py  fetching_models.rst  index.rst  install.rst  quickstart.ipynb  requirements.txt
docs/tutorial_data/: Goldilocks_20210517T054403_v1.0_0060.spectra.fits  SDCH_20201202_0059.spec_a0v.fits  SDCH_20201202_0059.variance.fits
docs/tutorials/: Caching_things.ipynb  Divide_by_a_blackbody.ipynb  PHOENIX_tutorial.ipynb  Phoenix_dashboard_demo.ipynb  best_fit_for_fixed_template.ipynb  filter_curve_synthetic_photometry.ipynb  gollum_demo_Sonora_and_BDSS.ipynb  index.rst  telfit_demo.ipynb
notebooks/: Gollum_Phoenix_Demo.ipynb  gollum_SonoraBobcat2021_demo.ipynb  gollum_demo_Sonora_and_BDSS.ipynb  temporary_development_demo.ipynb
paper/: paper.bib  paper.md
paper/JOSS_gollum/: paper.bib  paper.md
src/gollum/: config.env  coolTLUSTY.py  experimental.py  phoenix.py  precomputed_spectrum.py  sonora.py  telluric.py  utilities.py
src/gollum/V2/: phoenix.py  simple_spectrum.py  synthetic_spectrum.py
src/gollum/V2/conversion/: phoenix_conversion.py
src/volum/: phoenix.py
tests/: test_phoenix.py  test_precomputed.py  test_sonora.py
